--- a/package.json
+++ b/package.json
@@ -5,12 +5,27 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KevinFrohlich/bstformbackend.git"
+  },
+  "author": "Kevin Frohlich",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/KevinFrohlich/bstformbackend/issues"
+  },
+  "homepage": "https://github.com/KevinFrohlich/bstformbackend#readme",
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql2": "^2.1.0",
+    "sequelize": "^4.43.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
